add post form and ckeditor field

--- a/blog_proj/Pipfile
+++ b/blog_proj/Pipfile
@@ -8,6 +8,9 @@ flask = "*"
 flask-bootstrap = "*"
 sqlalchemy = "*"
 flask-sqlalchemy = "*"
+flask-wtf = "*"
+wtforms = "*"
+flask-ckeditor = "*"
 
 [dev-packages]
 
